@@ -1,49 +1,42 @@
 package com.microgames.mgwebsite.web.security;
 
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.stereotype.Service;
-import com.microgames.mgwebsite.web.entities.Userclient;
-import com.microgames.mgwebsite.web.repository.UserRepository;
+import com.microgames.mgwebsite.web.entities.Usermain;
+import com.microgames.mgwebsite.web.repository.UsermainRepository;
 
-import java.util.Collections;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.*;
+import org.springframework.stereotype.Service;
+
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
 
-    private final UserRepository userRepository; 
-    private final LoginAttemptService loginAttemptService;
+    private final UsermainRepository repository;
 
-    public CustomUserDetailsService(UserRepository userRepository, 
-                                    LoginAttemptService loginAttemptService) {
-        this.userRepository = userRepository;
-        this.loginAttemptService = loginAttemptService;
-
+    public CustomUserDetailsService(UsermainRepository repository) {
+        this.repository = repository;
     }
 
     @Override
-    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
+    public UserDetails loadUserByUsername(String username)
+            throws UsernameNotFoundException {
 
-if (loginAttemptService.isBlocked(email)) {
-            throw new UsernameNotFoundException("Cuenta bloqueada temporalmente por múltiples intentos fallidos. Intente más tarde.");
-        }
-
-
-        Userclient usuario = userRepository.findByEmail(email)
-                .orElseThrow(() -> new UsernameNotFoundException("Usuario no encontrado con email: " + email));
-
-        GrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + usuario.getRol());
+        Usermain user = repository.findByUsernameIgnoreCase(username)
+                .orElseThrow(() ->
+                        new UsernameNotFoundException(
+                                "Usuario no encontrado - Mensaje de error s-cuds-28: " + username));
 
         return new User(
-                  usuario.getEmail(),            // ← Cambiado a email
-                usuario.getPassword(),
-                usuario.isEnabled(),
-                true, true, true,
-                Collections.singletonList(authority)
+                user.getUsername(),
+                user.getPassword(),
+                user.isEnabled(),
+                true,
+                true,
+                true,
+                List.of(
+                        new SimpleGrantedAuthority(
+                                "ROLE_" + user.getRol()))
         );
     }
 }
